# ConferenceRegistrationApp

./: CMakeLists.txt  GuestRegistration.cpp  GuestRegistration.h  LICENSE  MainWindow.cpp  MainWindow.h  Person.cpp  Person.h  README.md  Registration.cpp  Registration.h  RegistrationList.cpp  RegistrationList.h  RegistrationListWriter.cpp  RegistrationListWriter.h  StandardRegistration.cpp  StandardRegistration.h  StudentRegistration.cpp  StudentRegistration.h  main.cpp
